fix table overflow style bug in bill-record page
Type: BF
Jira: HALO-1592

--- a/client/applications/bill/modules/billing-record/record/style/index.less
+++ b/client/applications/bill/modules/billing-record/record/style/index.less
@@ -91,6 +91,7 @@
   border-left: 1px solid @detail-border-color;
   transform: translate(100%, 0);
   transition: transform 0.5s;
+  overflow: hidden;
   &.visible {
     transform: translate(0, 0);
   }
