--- a/client/applications/bill/modules/billing-record/style/index.less
+++ b/client/applications/bill/modules/billing-record/style/index.less
@@ -6,6 +6,7 @@
 .halo-module-record {
   flex: 1;
   display: flex;
+  overflow: hidden;
   .table {
     .price {
       font-weight: bold;
