--- a/client/applications/bill/style/index.less
+++ b/client/applications/bill/style/index.less
@@ -15,6 +15,7 @@ a {
   border-left: 1px solid #e3e4e5;
   box-shadow: 12px 12px 40px 16px rgba(0,0,0,0.07);
   background-color: #fff;
+  overflow: hidden;
 }
 
 .status-data {
